Added delete to swagger
